Segfault when rendering AVI animation to /tmp #46565

Closed
opened 2015-10-22 04:28:58 +02:00 by Sarah · 6 comments

System Information
Arch Linux

Blender Version
Broken: blender-2.76-linux-glibc211-x86_64 build hash: 48f7dd6
Worked: (optional)

Short description of error

Segfault when rendering AVI animation to /tmp

Exact steps for others to reproduce the error

start blender with a new file, change output path from /tmp/ to /tmp, output as AVI JPEG, and press Animation button in render.

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffdea71700 (LWP 28948)]
0x00007ffff5cce771 in fseek () from /usr/lib/libc.so.6
(gdb) where
- 0  0x00007ffff5cce771 in fseek () from /usr/lib/libc.so.6
- 1  0x00000000018411ff in AVI_close_compress ()
- 2  0x000000000145246f in RE_BlenderAnim ()
- 3  0x00000000011deebe in ?? ()
- 4  0x0000000001065a9a in ?? ()
- 5  0x00007ffff66894a4 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007ffff5d4712d in clone () from /usr/lib/libc.so.6

crahsy.png

**System Information** Arch Linux **Blender Version** Broken: blender-2.76-linux-glibc211-x86_64 build hash: 48f7dd6 Worked: (optional) **Short description of error** Segfault when rendering AVI animation to /tmp **Exact steps for others to reproduce the error** start blender with a new file, change output path from /tmp/ to /tmp, output as AVI JPEG, and press Animation button in render. ``` Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffdea71700 (LWP 28948)] 0x00007ffff5cce771 in fseek () from /usr/lib/libc.so.6 (gdb) where - 0 0x00007ffff5cce771 in fseek () from /usr/lib/libc.so.6 - 1 0x00000000018411ff in AVI_close_compress () - 2 0x000000000145246f in RE_BlenderAnim () - 3 0x00000000011deebe in ?? () - 4 0x0000000001065a9a in ?? () - 5 0x00007ffff66894a4 in start_thread () from /usr/lib/libpthread.so.0 #6 0x00007ffff5d4712d in clone () from /usr/lib/libc.so.6 ``` ![crahsy.png](https://archive.blender.org/developer/F246211/crahsy.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @blackcandles

Added subscriber: @blackcandles

Added subscriber: @OliverBurn

Added subscriber: @OliverBurn

I confirmed this with official 2.76 on Linux mint 17.2

AMD Phenom II x6 1090t
16GB RAM
GTX 970 /w/official 346.96 drivers

Though it seems to be maybe a permissions issue, trying to write to /tmp.avi when the following slash is left off the end. That is to say it's trying to write the filename directly to root which of course is not allowed.

Still, would expect something more graceful than segfault in this case perhaps?

Cheers all.

I confirmed this with official 2.76 on Linux mint 17.2 AMD Phenom II x6 1090t 16GB RAM GTX 970 /w/official 346.96 drivers Though it seems to be maybe a permissions issue, trying to write to /tmp<framerange>.avi when the following slash is left off the end. That is to say it's trying to write the filename directly to root which of course is not allowed. Still, would expect something more graceful than segfault in this case perhaps? Cheers all.

This issue was referenced by c6d98fa841

This issue was referenced by c6d98fa8418d16f124a2866adf8a5848734241fd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46565
No description provided.