source/blender/blenkernel/intern/writeavi.c
@@ -215,8 +215,6 @@ static int start_avi(void *context_v, Scene *UNUSED(scene), RenderData *rd, int 
 
 	if (AVI_open_compress(name, avi, 1, format) != AVI_ERROR_NONE) {
 		BKE_report(reports, RPT_ERROR, "Cannot open or start AVI movie file");
-		MEM_freeN(avi);
-		avi = NULL;
 		return 0;
 	}
 			
